trustfall_core/test_data/tests/valid_queries/property_transform_filter.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(min: -1, max: 1) {
        value @output

        value @transform(op: "abs") @filter(op: ">", value: ["$zero"])
    }
}"#,
    arguments: {
        "zero": Uint64(0),
    },
)
