trustfall_core/test_data/tests/parse_errors/invalid_transform_supplying_argument_for_abs_op.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Two {
        # The "abs" transform operator does not accept arguments.
        name @transform(op: "abs", value: ["$arg"]) @output
    }
}"#,
    arguments: {
        "arg": Uint64(0),
    },
)
